syntax = "proto3";

enum RequestType {
    PING = 0;
    SET_PIN_DIRECTION = 1;
    SET_PIN_VALUE = 2;
    GET_PIN_DIRECTION = 3;
    GET_PIN_VALUE = 4;
}

enum PinValue {
    LOW = 0;
    HIGH = 1;
    INPUT = 2;
    OUTPUT = 3;
}

message PicohaDioRequest {
    RequestType type = 1;
    uint32 pin_num = 2;
    PinValue value = 3;
}

enum AnswerType {
    SUCCESS = 0;
    FAILURE = 1;
}

message PicohaDioAnswer {
    AnswerType type = 1;
    optional PinValue value = 2;
    optional string error_message = 3;
}
